Fixed project spacing

--- a/portfolio/src/components/ProjectBlocks/index.css
+++ b/portfolio/src/components/ProjectBlocks/index.css
@@ -68,6 +68,7 @@
         white-space: normal;
         text-align: left;
         font-weight: bold;
+        margin-top: 15px;
     }
 
     .description-line {
@@ -106,6 +107,10 @@
     &:hover .description, &:hover .btn {
         opacity: 1;
         transform: translateY(0);
+    }
+
+    &:hover .title {
+        margin-top: 7px;
     }
 }
 
